<resources>
    <string name="app_name">Cook-eBook</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="title_activity_single_recipe">Chocolate Chip Cookies</string>
    <string name="view_recipe">View Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="large_text">Test</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="set_a_cooking_time_in_minutes">Set a Cooking Time (in minutes)</string>
    <string name="add_a_description">Add a Description</string>
    <string name="add_the_tags">Add the Tags</string>
    <string name="add_the_ingredients">Add the Ingredients</string>
    <string name="add_a_title">Add a Title</string>
    <string name="duplicate_recipe">Duplicate Recipe</string>
</resources>
