<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddEditView"
    tools:showIn="@layout/activity_add_edit_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presentation.AddEditView"
        tools:showIn="@layout/activity_add_edit_view">

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/add_a_title"
            android:inputType="textPersonName" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp">
            <EditText
                android:id="@+id/addDescription"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_a_description" />
        </android.support.v4.widget.NestedScrollView>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp">
            <EditText
                android:id="@+id/addIngredients"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_the_ingredients" />
        </android.support.v4.widget.NestedScrollView>

        <EditText
            android:id="@+id/addTime"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/set_a_cooking_time_in_minutes"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/addTags"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp"
            android:ems="10"
            android:hint="@string/add_the_tags"
            android:inputType="textPersonName" />

    </LinearLayout>

</ScrollView>